chore: adopt generated CLAUDE.md, migrate project notes to CLAUDE-{name}.md